--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ span
     color: red;
     background-image: url(background.png);
     background-size: 100%;
-    padding-bottom: 50px;
-    padding-top: 50px;
+    padding-bottom: 15vh;
+    padding-top: 25vh;
 }
 
 
@@ -31,12 +31,12 @@ span
 
 .header h1
 {
-    font-size: 275px;
+    font-size: 15vw;
 }
 
 .header h4
 {
-    font-size: 55px;
+    font-size: 2vw;
 }
 
 .header p
@@ -44,7 +44,7 @@ span
     font-family:'Lobster',monospace; 
     color: #555;
     line-height: 3;
-    font-size: 20px;
+    font-size: 1vw;
 }
 
 .header a
