--- a/styles_mobile.css
+++ b/styles_mobile.css
@@ -37,7 +37,7 @@ span
     position: fixed;
     background-color: #FCFF00;
     width: 100vw;
-    height: 20vh;
+    height: 20vw;
     z-index: 100;
     transition: transform 1s ease;
 }
