--- a/styles.css
+++ b/styles.css
@@ -125,11 +125,15 @@ span
 .header h1
 {
     font-size: 5vw;
+    animation: FadeInAndUp 1s 1;
+    animation-fill-mode: both;
 }
 
 .header h4
 {
     font-size: 2vw;
+    animation: FadeInAndUp 1s 1;
+    animation-fill-mode: both;
     animation-delay: .25s;
 }
 
@@ -144,10 +148,28 @@ span
     animation-fill-mode: both;
 }
 
+#menu p
+{
+    font-family:'Lobster', 'Oswald',monospace; 
+    color: #00e1ff;
+    line-height: 3;
+    font-size: 1vw;
+    word-spacing: 4vw;
+    animation: FadeInAndUp 1s 1;
+    animation-delay: .5s;
+    animation-fill-mode: both;
+}
+
 .header a
 {
     text-decoration: none;
     color: #555;
+}
+
+.header a:hover
+{
+    text-decoration: none;
+    color: #00e1ff;
 }
 
 
