--- a/styles_mobile.css
+++ b/styles_mobile.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster|Oswald');
 
+body
+{
+    margin: 0;   
+}
+
 div
 {
     font-family:'Oswald',monospace;
